--- a/Agents/robot_vacuum.ipynb
+++ b/Agents/robot_vacuum.ipynb
@@ -429,6 +429,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "iZByaZAetNeT",
         "outputId": "349ea824-9def-4ca8-8f7a-b259844754b0"
       },
@@ -3468,6 +3469,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "outputId": "42b33a5c-4ccf-4c3b-db2f-d86d580ba223"
       },
       "outputs": [
@@ -4645,6 +4647,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "outputId": "f138a36a-2c89-4534-a439-d7e8db93d865"
       },
       "outputs": [
