--- a/Search/Maze.ipynb
+++ b/Search/Maze.ipynb
@@ -49,11 +49,11 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "hFi_5JUcOdBz",
-        "outputId": "abcaffc9-e9b8-4263-fc88-f9cd1e6ba93c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hFi_5JUcOdBz",
+        "outputId": "abcaffc9-e9b8-4263-fc88-f9cd1e6ba93c"
       },
       "outputs": [
         {
@@ -105,11 +105,11 @@
       "execution_count": 3,
       "metadata": {
         "tags": [],
-        "id": "K2VR2OkZOdB0",
-        "outputId": "dda769f2-a2b2-4f7a-9368-0783fc081e0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K2VR2OkZOdB0",
+        "outputId": "dda769f2-a2b2-4f7a-9368-0783fc081e0b"
       },
       "outputs": [
         {
@@ -147,12 +147,12 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "5g3ZdMz5OdB0",
-        "outputId": "2ba7fab8-63ef-488b-c1e9-5a0670997103",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "5g3ZdMz5OdB0",
+        "outputId": "2ba7fab8-63ef-488b-c1e9-5a0670997103"
       },
       "outputs": [
         {
@@ -192,11 +192,11 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "JWn2dfvJOdB0",
-        "outputId": "3362c9fc-5d11-4cec-e808-13eafc01bd56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JWn2dfvJOdB0",
+        "outputId": "3362c9fc-5d11-4cec-e808-13eafc01bd56"
       },
       "outputs": [
         {
@@ -226,11 +226,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "wEAWRgWROdB0",
-        "outputId": "0f2dbdc4-fce2-4a49-fb99-40896e80b7e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wEAWRgWROdB0",
+        "outputId": "0f2dbdc4-fce2-4a49-fb99-40896e80b7e8"
       },
       "outputs": [
         {
@@ -630,71 +630,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "id": "KcljkkL0OdB1"
-      },
-      "outputs": [],
-      "source": [
-        "# Your code goes here"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DMl4cGQGOdB1"
-      },
-      "source": [
-        "Are your implementations complete and optimal? What is the time and space complexity?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "id": "mXAU5tDFOdB1"
-      },
-      "outputs": [],
-      "source": [
-        "# Discussion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FJXZoESnOdB1"
-      },
-      "source": [
-        "## Task 4: Comparison and discussion [20 Points]\n",
-        "\n",
-        "Run experiments to compare the implemented algorithms.\n",
-        "\n",
-        "How to deal with issues:\n",
-        "\n",
-        "* Your implementation returns unexpected results: Try to debug and fix the code. Visualizing the maze, the current path and the frontier after every step is very helpful. If the code still does not work, then mark the result with an asterisk (*) and describe the issue below the table.\n",
-        "\n",
-        "* Your implementation cannot consistently solve a specific maze and ends up in an infinite loop:\n",
-        "    Debug (likely your frontier and cycle checking for DFS are the issue). If it is a shortcoming of the algorithm/implementation, then put \"N/A*\" in the results table and describe why this is happening."
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "def heuristic(pos1, pos2):\n",
         "    \"\"\"Manhattan distance heuristic for pathfinding.\"\"\"\n",
         "    return abs(pos1[0] - pos2[0]) + abs(pos1[1] - pos2[1])\n"
       ],
       "metadata": {
-        "id": "bphbeJCCQFS7"
+        "id": "u1FuYzjzQZdB"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 29,
       "metadata": {
-        "id": "uJ8Q0-tUOdB1"
+        "id": "KcljkkL0OdB1"
       },
       "outputs": [],
       "source": [
@@ -752,8 +703,149 @@
         "                child_node = Node(neighbor, parent=current_node, action=action, cost=new_cost)  # ✅ Pass action\n",
         "                heapq.heappush(frontier, (new_cost + heuristic(neighbor, goal), new_cost, child_node))\n",
         "\n",
-        "    return None, nodes_expanded, max_frontier_size, max_depth\n"
+        "    return None, nodes_expanded, max_frontier_size, max_depth"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DMl4cGQGOdB1"
+      },
+      "source": [
+        "Are your implementations complete and optimal? What is the time and space complexity?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "mXAU5tDFOdB1"
+      },
+      "outputs": [],
+      "source": [
+        "# Discussion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FJXZoESnOdB1"
+      },
+      "source": [
+        "## Task 4: Comparison and discussion [20 Points]\n",
+        "\n",
+        "Run experiments to compare the implemented algorithms.\n",
+        "\n",
+        "How to deal with issues:\n",
+        "\n",
+        "* Your implementation returns unexpected results: Try to debug and fix the code. Visualizing the maze, the current path and the frontier after every step is very helpful. If the code still does not work, then mark the result with an asterisk (*) and describe the issue below the table.\n",
+        "\n",
+        "* Your implementation cannot consistently solve a specific maze and ends up in an infinite loop:\n",
+        "    Debug (likely your frontier and cycle checking for DFS are the issue). If it is a shortcoming of the algorithm/implementation, then put \"N/A*\" in the results table and describe why this is happening."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Function to visualize the maze with search path\n",
+        "def visualize_maze_solution(maze, path, visited_nodes, start, goal):\n",
+        "    \"\"\"Displays the maze using the mh library with visited nodes and the final path.\"\"\"\n",
+        "    visual_maze = np.copy(maze)  # Make a safe copy of the maze structure\n",
+        "\n",
+        "    for pos in visited_nodes:\n",
+        "        if isinstance(pos, tuple) and mh.look(visual_maze, pos) in ['.', ' ']:\n",
+        "            visual_maze[pos] = '.'  # Mark visited nodes with integer 5 (gray in mh.show_maze())\n",
+        "\n",
+        "    for pos in path:\n",
+        "        if pos == start or pos == goal:\n",
+        "            continue  # Keep 'S' and 'G' unchanged\n",
+        "        if isinstance(pos, tuple):\n",
+        "            visual_maze[pos] = 'P'  # Mark final path with integer 4 (red in mh.show_maze())\n",
+        "\n",
+        "    print(\"Updated Maze Before Displaying:\")\n",
+        "    print(visual_maze)\n",
+        "    mh.show_maze(visual_maze)  # Use mh library for visualization  # Use mh library for visualization  # Use mh library for visualization  # Use mh library for visualization\n",
+        "\n",
+        "# Function to run searches and visualize solutions\n",
+        "def run_and_visualize_search(maze_file, search_algorithm):\n",
+        "    print(f\"\\nRunning {search_algorithm.__name__} on {maze_file}...\\n\")\n",
+        "\n",
+        "    # Load the maze\n",
+        "    with open(maze_file, \"r\") as f:\n",
+        "        maze_str = f.read()\n",
+        "    maze = mh.parse_maze(maze_str)\n",
+        "    mh.show_maze(maze)  # Display the raw maze before solving\n",
+        "\n",
+        "    # Find start and goal positions\n",
+        "    start = mh.find_pos(maze, \"S\")\n",
+        "    goal = mh.find_pos(maze, \"G\")\n",
+        "\n",
+        "    if start is None or goal is None:\n",
+        "    raise ValueError(f\"Error: Start ('S') or Goal ('G') not found in {maze_file}. Check the maze file contents.\")  # Avoid IndexError by skipping the maze\n",
+        "\n",
+        "    # Run the search algorithm\n",
+        "    path, nodes_expanded, frontier_size, max_depth = search_algorithm(maze, start, goal)\n",
+        "\n",
+        "    if path:\n",
+        "        print(f\"Solution found! Path cost: {len(path)}\")\n",
+        "        visualize_maze_solution(maze, path, path, start, goal)\n",
+        "    else:\n",
+        "        print(\"No solution found.\")\n",
+        "\n",
+        "    return {\n",
+        "        \"maze\": maze_file,\n",
+        "        \"algorithm\": search_algorithm.__name__,\n",
+        "        \"path_cost\": len(path) if path else None,\n",
+        "        \"nodes_expanded\": nodes_expanded,\n",
+        "        \"max_frontier_size\": frontier_size,\n",
+        "        \"max_depth\": max_depth\n",
+        "    }\n",
+        "\n",
+        "# Run and visualize all searches\n",
+        "search_algorithms = [bfs, dfs, gbfs, a_star]\n",
+        "search_results = []\n",
+        "search_summary = []\n",
+        "# Load the maze filenames\n",
+        "maze_files = [\n",
+        "    \"small_maze.txt\",\n",
+        "    \"medium_maze.txt\",\n",
+        "    \"large_maze.txt\",\n",
+        "    \"open_maze.txt\",\n",
+        "    \"wall_maze.txt\",\n",
+        "    \"loops_maze.txt\",\n",
+        "    \"empty_maze.txt\",\n",
+        "    \"empty_2_maze.txt\"\n",
+        "]\n",
+        "\n",
+        "for maze_file in maze_files:\n",
+        "    for algo in search_algorithms:\n",
+        "        result = run_and_visualize_search(maze_file, algo)\n",
+        "        if result:\n",
+        "            search_results.append(result)\n",
+        "            search_summary.append({\n",
+        "                \"Maze\": maze_file,\n",
+        "                \"Algorithm\": algo.__name__,\n",
+        "                \"Path Cost\": result[\"path_cost\"],\n",
+        "                \"Nodes Expanded\": result[\"nodes_expanded\"],\n",
+        "                \"Max Tree Depth\": result[\"max_depth\"],\n",
+        "                \"Max Frontier Size\": result[\"max_frontier_size\"]\n",
+        "            })\n",
+        "\n",
+        "# Convert results to a DataFrame\n",
+        "df_results = pd.DataFrame(search_results)\n",
+        "df_summary = pd.DataFrame(search_summary)\n",
+        "\n",
+        "# Display results in a table\n",
+        "from IPython.display import display\n",
+        "\n",
+        "print(\"Maze Search Visualization Results:\")\n",
+        "display(df_results)"
+      ],
+      "metadata": {
+        "id": "Yj5LV_29QTl8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
